<resources>
    <string name="app_name">HEALTHAPPS</string>
    <string name="inicio">INICIO</string>
    <string name="recordar_contrase_a">olvide mi contraseña</string>
    <string name="registro">REGISTRO</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="recordarcontrase_a"><u>Recordar Contraseña</u></string>
    <string name="todo1">TODO</string>
    <string name="email">Registrar su Correo electronico</string>
    <string name="contraseña">Password</string>
    <string name="confirmarpass">Confirmarpassword</string>
    <string name="genero">Genero</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="password">ingrese la contreseña</string>
    <string name="email_error">Email no valido</string>
    <string name="password_error">password no valido</string>


</resources>