<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.registroActivity"
    android:background="@drawable/fondo1">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="428dp"
        android:layout_height="214dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logoinicio"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-8dp">


        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:hint="@string/usuario"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:endIconMode="password_toggle"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            android:inputType="" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:hint="@string/contraseña"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            app:passwordToggleEnabled="true"
            android:inputType="" />

        <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:hint="@string/confirmarpass"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType=""
            android:autofillHints=""
            app:passwordToggleEnabled="true"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textColor="#B2EBF2" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
