<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.loginActivity"
    android:background="@drawable/fondo1">

    <RelativeLayout
        android:name="androidx.navegation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.activities.loginActivity"

        >
        <!--
        app:navGrahp="@navigation/login_app"
        app:defaultNavHost="true"-->


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="67dp"
            android:layout_marginTop="-54dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="545dp"
            android:contentDescription="@string/todo1"
            app:srcCompat="@drawable/logoinicio" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="452dp"
            android:autofillHints=""
            android:background="@drawable/style_bord"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white" />

       <!-- <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/brecor"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="90dp"
            app:passwordToggleEnabled= "true"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="107dp"
            android:layout_marginBottom="356dp"
            android:autofillHints=""
            android:background="@drawable/style_bord"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white" />-->
<com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextNumberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/brecor"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="295dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="375dp"
            android:background="@drawable/style_bord"
            android:ems="10"
            android:hint="@string/contrase_a"
            app:endIconMode="password_toggle"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true" />


        <Button
            android:id="@+id/bini"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="104dp"
            android:layout_marginTop="356dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="300dp"
            android:text="@string/inicio"
            android:textSize="20dp" />

        <Button
            android:id="@+id/bregis"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="103dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="200dp"
            android:text="@string/registro"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/brecor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="107dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="34dp"
            android:gravity="center"
            android:text="@string/recordarcontrase_a"
            android:textColor="@color/liena"
            android:textSize="20dp" />



</RelativeLayout>


</RelativeLayout>

